Found a bug where the project list was landing behind the names in the file list; fixed this.

--- a/ide-redesign/styles/_dropdown.scss
+++ b/ide-redesign/styles/_dropdown.scss
@@ -80,6 +80,7 @@ select.dropdown-num {
   min-width: 160px;
   position: absolute;
   width: 100%;
+  z-index: 99;
   /* Links inside the dropdown */
   select {
     border: none;
